--- a/larvae_growth_2015.Rmd
+++ b/larvae_growth_2015.Rmd
@@ -1,10 +1,12 @@
 ---
 title: "Puget Sound Larvae Growth"
+author: "Katherine Silliman"
 output:
+  github_document:
+    toc: yes
   html_notebook:
     fig_height: 3
     fig_width: 4
-  html_document: default
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
@@ -17,38 +19,270 @@ References
 http://www.flutterbys.com.au/stats/tut/tut9.2a.html
 http://rcompanion.org/rcompanion/d_07.html
 
-```{r}
-library(dplyr)
-library(nlme)
+```{r, include=FALSE}
+library(dplyr) #data frame grouping
+library(nlme) #LMMs, using likelihood ratio test for significance
 library(plotrix)#for SE calculation
-library(multcompView)
-library(lsmeans)
+#library(multcompView)
 library(ggplot2)
 library(lme4) #for linear mixed models
+library(afex) #different way for getting significance from LMMs
+library(PMCMR) #Kruskal-Wallis test
 ```
+Reading in larvae size data.
 ```{r}
 all.larvae <- read.csv("PS_Larvae.csv",header = TRUE, na.strings = "#DIV/0!")
-Day1 <- read.csv("Day1_Larvae.csv",header=TRUE )
-Day1 <- select(Day1,c(Population,Date,Average_Length,Area)) 
-Day1$Replicate = NA
-all.larvae <- read.csv("P.S. Larvae Sizing - Sheet6.csv",header = TRUE, na.strings = "#DIV/0!")
-```
-
-```{r}
 G1.all <- select(all.larvae, Population, Replicate, Date, Average_Length,Area) %>% group_by(Population,Date)
-G1.78.715 <- all.larvae %>% 
-  filter(Date == "7-8-15" | Date == "7-15-15") %>%
-  select(Population, Replicate, Date, Average_Length,Area)
-G1.all <- rbind(Day1,G1.78.715)
-G1.all <- group_by(G1.all,Population,Date)
-G1.all
 ```
-
+Summarizing sizes at different time points.
 ```{r}
-G1.all.mean <- summarise(G1.all, mean.length = mean(Average_Length, na.rm = TRUE), mean.area = mean(Area, na.rm = TRUE))
+G1.all.mean <- summarise(G1.all,mean.Area = mean(Area, na.rm = T),se.Area = std.error(Area,na.rm =T),mean.Length = mean(Average_Length, na.rm = T),se.Length = std.error(Average_Length,na.rm =T))
 G1.all.mean
 ```
-Calculating shell area means from Day 1 for normalizations
+Plotting size distributions at Day 1.
+```{r}
+p.Day1 <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Area,fill=Population)) + 
+  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Area Day 1",y="Area (mm^2)")
+p.Day1
+
+p.Day1.L <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Average_Length,fill=Population)) + 
+  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Length Day 1",y="Length (mm)")
+p.Day1.L
+```
+Checking for normal distributions in Area at each time point.
+```{r}
+plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 1 distributions")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Area)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Area)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Area)
+
+plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.009,0.03),ylim=c(0,200))
+lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Area)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Area)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Area)
+
+plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 14 distributions",xlim =c(0.009,0.045))
+lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Area)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Area)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Area)
+```
+Shell area in SS and NF at Day 14 does not have a normal distribution. 
+
+Checking for normal distributions in Length at each time point.
+```{r}
+plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 1 distributions", xlim=c(0.11,0.19))
+lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length)
+
+plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.12,0.21),ylim=c(0,50))
+lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length)
+
+plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9",main ="Day 14 distributions",xlim =c(0.12,0.25))
+lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length)
+```
+Plotting size through time.
+```{r}
+G1.all.mean$Date <- c(1,14,7,1,14,7,1,14,7)
+Fig.Area <- ggplot(G1.all.mean, aes(x=Date, y=mean.Area, group=Population)) +
+  geom_errorbar(aes(ymin=G1.all.mean$mean.Area-G1.all.mean$se.Area,ymax=G1.all.mean$mean.Area+G1.all.mean$se.Area,color=Population), width=.07) +
+  geom_line(aes(color=Population) ,size = 0.5) +   
+  geom_point(aes(shape=Population,color=Population), size = 3)+
+  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
+  ylab(expression(paste("Shell Area (mm^2)"))) +
+  theme_bw() + #Set the background color
+  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
+        axis.line = element_line(color = 'black'), #Set the axes color
+        panel.border = element_blank(), #Set the border
+        panel.grid.major = element_blank(), #Set the major gridlines
+        panel.grid.minor = element_blank(), #Set the minor gridlines
+        plot.background=element_blank(),  #Set the plot background
+        legend.key = element_blank(),  #remove legend background
+        legend.position=c(.2, .7)) + #set legend location
+  ggtitle("Larvae Shell Area") +
+  theme(plot.title = element_text(face = 'bold', 
+                                  size = 14, 
+                                  hjust = 0))
+Fig.Area <- Fig.Area + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
+Fig.Area
+
+Fig.L <- ggplot(G1.all.mean, aes(x=Date, y=mean.Length, group=Population)) +
+  geom_errorbar(aes(ymin=G1.all.mean$mean.Length-G1.all.mean$se.Length,ymax=G1.all.mean$mean.Length+G1.all.mean$se.Length,color=Population), width=.07) +
+  geom_line(aes(color=Population) ,size = 0.5) +   
+  geom_point(aes(shape=Population,color=Population), size = 3)+
+  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
+  ylab(expression(paste("Shell Area (mm)"))) +
+  theme_bw() + #Set the background color
+  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
+        axis.line = element_line(color = 'black'), #Set the axes color
+        panel.border = element_blank(), #Set the border
+        panel.grid.major = element_blank(), #Set the major gridlines
+        panel.grid.minor = element_blank(), #Set the minor gridlines
+        plot.background=element_blank(),  #Set the plot background
+        legend.key = element_blank(),  #remove legend background
+        legend.position=c(.2, .7)) + #set legend location
+  ggtitle("Larvae Shell Length") +
+  theme(plot.title = element_text(face = 'bold', 
+                                  size = 14, 
+                                  hjust = 0))
+Fig.L <- Fig.L + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
+Fig.L
+```
+## Testing for differences in size
+ANOVA of size at Day 1 to test if size differs accross populations at Day 1
+```{r}
+G1.D1 <- filter(G1.all, Date == "7-1-15")
+area.D1 <- aov(Area ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
+area.D1.res <- anova(area.D1)
+area.D1.res
+
+length.D1 <- aov(Average_Length ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
+length.D1.res <- anova(length.D1)
+length.D1.res
+```
+### Day 7
+Untransformed shell area.
+```{r}
+G1.D7 <- filter(G1.all, Date == "7-8-15")
+area.D7.model = lmer(Area ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
+summary(area.D7.model)
+area.null <- lmer(Area ~ (1|Replicate),data=G1.D7,REML=FALSE)
+area.model.R <- lmer(Area ~ Population + (1|Replicate),data=G1.D7,REML = F)
+anova(area.null,area.model.R)
+
+afex.1 <- mixed(Area ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
+print(afex.1)
+```
+Log-transformed shell area.
+```{r}
+Larea.D7.model = lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
+summary(Larea.D7.model)
+area.null <- lmer(log10(Area) ~ (1|Replicate),data=G1.D7,REML=FALSE)
+area.model.R <- lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D7,REML = F)
+anova(area.null,area.model.R)
+
+afex.1 <- mixed(log10(Area) ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
+print(afex.1)
+```
+Untransformed shell length, Day 7.
+```{r}
+length.D7.model = lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
+summary(length.D7.model)
+area.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D7,REML=FALSE)
+area.model.R <- lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,REML = F)
+anova(area.null,area.model.R)
+afex.1 <- mixed(Average_Length ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
+print(afex.1)
+```
+Log-transformed shell length, Day 7.
+```{r}
+Larea.D7.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
+summary(Larea.D7.model)
+area.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D7,REML=FALSE)
+area.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,REML = F)
+anova(area.null,area.model.R)
+
+afex.1 <- mixed(log10(Average_Length) ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
+print(afex.1)
+```
+
+### Day 14
+Untransformed Day 14 shell area
+```{r}
+G1.D14 <- filter(G1.all, Date == "7-15-15")
+relarea.D14.model = lmer(Area ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+summary(relarea.D14.model)
+relarea.null <- lmer(Area ~ (1|Replicate),data=G1.D14,REML=FALSE)
+relarea.model.R <- lmer(Area ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
+anova(relarea.null,relarea.model.R)
+
+afex.1 <- mixed(Area ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+print(afex.1)
+```
+Log-transformed shell area, Day 14.
+```{r}
+Lrelarea.D14.model = lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
+summary(Lrelarea.D14.model)
+relarea.null <- lmer(log10(Area) ~ (1|Replicate),data=G1.D14,REML=FALSE)
+relarea.model.R <- lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
+anova(relarea.null,relarea.model.R)
+
+afex.1 <- mixed(log10(Area) ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+print(afex.1)
+```
+
+Day 14 untransformed shell length:
+```{r}
+G1.D14 <- filter(G1.all, Date == "7-15-15")
+relarea.D14.model = lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+summary(relarea.D14.model)
+relarea.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D14,REML=FALSE)
+relarea.model.R <- lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,REML = FALSE)
+anova(relarea.null,relarea.model.R)
+
+afex.1 <- mixed(Average_Length~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+print(afex.1)
+```
+Log-transformed shell length, Day 14.
+```{r}
+Lrelarea.D14.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
+summary(Lrelarea.D14.model)
+relarea.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D14,REML=FALSE)
+relarea.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
+anova(relarea.null,relarea.model.R)
+
+afex.1 <- mixed(log10(Average_Length)~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+print(afex.1)
+```
+
+Kruskal-Wallis tests with Nemenyi post-hoc tests. Used when data is non-normal, which only occured in Day 14 shell area.
+```{r}
+#Shell area
+posthoc.kruskal.nemenyi.test(G1.D1$Area,as.factor(G1.D1$Population),dist="Chisquare")
+posthoc.kruskal.nemenyi.test(G1.D7$Area,as.factor(G1.D7$Population),dist="Chisquare")
+posthoc.kruskal.nemenyi.test(G1.D14$Area,as.factor(G1.D14$Population),dist="Chisquare")
+```
+Pairwise t-test with bonferroni correction. Only appropriate for Day 1 and Day 7
+```{r}
+pairwise.t.test(G1.D1$Area,G1.D1$Population,p.adjust.method = "bonferroni")
+pairwise.t.test(G1.D7$Area,G1.D7$Population,p.adjust.method = "bonferroni")
+pairwise.t.test(G1.D14$Area,G1.D14$Population,p.adjust.method = "bonferroni")
+```
+Shell Length tests
+```{r}
+posthoc.kruskal.nemenyi.test(G1.D1$Average_Length,as.factor(G1.D1$Population),dist="Chisquare")
+posthoc.kruskal.nemenyi.test(G1.D7$Average_Length,as.factor(G1.D7$Population),dist="Chisquare")
+posthoc.kruskal.nemenyi.test(G1.D14$Average_Length,as.factor(G1.D14$Population),dist="Chisquare")
+```
+```{r}
+pairwise.t.test(G1.D1$Average_Length,G1.D1$Population,p.adjust.method = "bonferroni")
+pairwise.t.test(G1.D7$Average_Length,G1.D7$Population,p.adjust.method = "bonferroni")
+pairwise.t.test(G1.D14$Average_Length,G1.D14$Population,p.adjust.method = "bonferroni")
+```
+## Using Relative Area and Length
+Calculating shell area means at Day 1 for normalizations. This could be used is shell size varied significantly at Day 1. We did not observe this, but size did differ slightly between HC and NF/SS. 
 ```{r}
 means.A <- summarise(G1.all, mean.area = mean(Area, na.rm = TRUE), mean.length = mean(Average_Length))
 mean.A.HC <- subset(means.A,Population =="HC" &Date=="7-1-15",select=mean.area) #subset mean area for day 1 HC
@@ -76,214 +310,15 @@ G1.all$A.norm <- as.numeric(sapply(G1.all$Population,A.norms))
 G1.all$L.norm <- as.numeric(sapply(G1.all$Population,L.norms))
 G1.all$A.rel <- G1.all$Area /G1.all$A.norm #normalize the area to be relative size
 G1.all$L.rel <- G1.all$Average_Length /G1.all$L.norm #normalize the area to be relative size
-
-Area.Size = summarise(G1.all,mean.Area = mean(Area, na.rm = T),se.Area = std.error(Area,na.rm =T),mean.RelArea = mean(A.rel,na.rm=T),se.RelArea = std.error(A.rel,na.rm=T),mean.Length = mean(Average_Length, na.rm = T),se.Length = std.error(Average_Length,na.rm =T),mean.RelLength = mean(L.rel,na.rm=T),se.RelLength = std.error(L.rel,na.rm=T))
+```
+Summarizing:
+```{r}
+Area.Size <- summarise(G1.all,mean.RelArea = mean(A.rel),se.RelArea = std.error(A.rel,na.rm =T),mean.RelLength = mean(L.rel, na.rm = T),se.RelLength = std.error(L.rel,na.rm =T))
 Area.Size
 ```
 ```{r}
-p.Day1 <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Area,fill=Population)) + 
-  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Area Day 1",y="Area (mm^2)")
-p.Day1
-
-p.Day1.L <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Average_Length,fill=Population)) + 
-  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Length Day 1",y="Length (mm)")
-p.Day1.L
-```
-Checking for normalcy in Area
-```{r}
-plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 1 distributions")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Area)
-
-plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.009,0.03),ylim=c(0,200))
-lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Area)
-
-plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 14 distributions",xlim =c(0.009,0.045))
-lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Area)
-```
-Checking for normalcy in Length
-```{r}
-plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 1 distributions", xlim=c(0.11,0.19))
-lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length)
-
-plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.12,0.21),ylim=c(0,50))
-lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length)
-
-plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9",main ="Day 14 distributions",xlim =c(0.12,0.25))
-lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length)
-```
-
-
-```{r}
 Area.Size$Date <- c(1,14,7,1,14,7,1,14,7)
-Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.Area, group=Population)) + 
-  geom_errorbar(aes(ymin=Area.Size$mean.Area-Area.Size$se.Area,ymax=Area.Size$mean.Area+Area.Size$se.Area,color=Population), width=.07) +
-  geom_line(aes(color=Population) ,size = 0.5) +   
-  geom_point(aes(shape=Population,color=Population), size = 3)+
-  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
-  ylab(expression(paste("Shell Area (mm^2)"))) +
-  theme_bw() + #Set the background color
-  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
-        axis.line = element_line(color = 'black'), #Set the axes color
-        panel.border = element_blank(), #Set the border
-        panel.grid.major = element_blank(), #Set the major gridlines
-        panel.grid.minor = element_blank(), #Set the minor gridlines
-        plot.background=element_blank(),  #Set the plot background
-        legend.key = element_blank(),  #remove legend background
-        legend.position=c(.2, .7)) + #set legend location
-  ggtitle("Larvae Shell Area") +
-  theme(plot.title = element_text(face = 'bold', 
-                                  size = 14, 
-                                  hjust = 0))
-Fig.Exp1.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
-
-Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.Length, group=Population)) + 
-  geom_errorbar(aes(ymin=Area.Size$mean.Length-Area.Size$se.Length,ymax=Area.Size$mean.Length+Area.Size$se.Length,color=Population), width=.07) +
-  geom_line(aes(color=Population) ,size = 0.5) +   
-  geom_point(aes(shape=Population,color=Population), size = 3)+
-  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
-  ylab(expression(paste("Shell Area (mm)"))) +
-  theme_bw() + #Set the background color
-  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
-        axis.line = element_line(color = 'black'), #Set the axes color
-        panel.border = element_blank(), #Set the border
-        panel.grid.major = element_blank(), #Set the major gridlines
-        panel.grid.minor = element_blank(), #Set the minor gridlines
-        plot.background=element_blank(),  #Set the plot background
-        legend.key = element_blank(),  #remove legend background
-        legend.position=c(.2, .7)) + #set legend location
-  ggtitle("Larvae Shell Length") +
-  theme(plot.title = element_text(face = 'bold', 
-                                  size = 14, 
-                                  hjust = 0))
-Fig.Exp1.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
-```
-
-```{r}
-G1.D1 <- filter(G1.all, Date == "7-1-15")
-area.D1 <- aov(Area ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
-area.D1.res <- anova(area.D1)
-area.D1.res
-
-length.D1 <- aov(Average_Length ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
-length.D1.res <- anova(length.D1)
-length.D1.res
-```
-Regular and log-transformed Area: Day 7
-```{r}
-area.D7.model = lmer(Area ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(area.D7.model)
-area.null <- lmer(Area ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(Area ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-
-Larea.D7.model = lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(Larea.D7.model)
-area.null <- lmer(log10(Area) ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-```
-Regular and log-transformed Length: Day 7
-```{r}
-length.D7.model = lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(length.D7.model)
-area.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-
-Larea.D7.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(Larea.D7.model)
-area.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-```
-
-Day 14 Area:
-```{r}
-G1.D14 <- filter(G1.all, Date == "7-15-15")
-relarea.D14.model = lmer(Area ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
-summary(relarea.D14.model)
-relarea.null <- lmer(Area ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(Area ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-
-Lrelarea.D14.model = lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
-summary(Lrelarea.D14.model)
-relarea.null <- lmer(log10(Area) ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(log10(Area) ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-```
-
-Day 14 Length:
-```{r}
-G1.D14 <- filter(G1.all, Date == "7-15-15")
-relarea.D14.model = lmer(Average_Length ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
-summary(relarea.D14.model)
-relarea.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(Average_Length ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-
-Lrelarea.D14.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
-summary(Lrelarea.D14.model)
-relarea.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-```
-```{r}
-pairwise.t.test(G1.D1$Area,G1.D1$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D7$Area,G1.D7$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D14$Area,G1.D14$Population,p.adjust.method = "bonferroni")
-```
-```{r}
-library(PMCMR)
-posthoc.kruskal.nemenyi.test(G1.D1$Area,as.factor(G1.D1$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D7$Area,as.factor(G1.D7$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D14$Area,as.factor(G1.D14$Population),dist="Chisquare")
-```
-```{r}
-pairwise.t.test(G1.D1$Average_Length,G1.D1$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D7$Average_Length,G1.D7$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D14$Average_Length,G1.D14$Population,p.adjust.method = "bonferroni")
-```
-```{r}
-posthoc.kruskal.nemenyi.test(G1.D1$Average_Length,as.factor(G1.D1$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D7$Average_Length,as.factor(G1.D7$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D14$Average_Length,as.factor(G1.D14$Population),dist="Chisquare")
-```
-
-##Using Relative Area and Length
-```{r}
-Area.Size$Date <- c(1,14,7,1,14,7,1,14,7)
-Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelArea, group=Population)) + 
+Fig.Area.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelArea, group=Population)) + 
   geom_errorbar(aes(ymin=Area.Size$mean.RelArea-Area.Size$se.RelArea,ymax=Area.Size$mean.RelArea+Area.Size$se.RelArea,color=Population), width=.07) +
   geom_line(aes(color=Population) ,size = 0.5) +   
   geom_point(aes(shape=Population,color=Population), size = 3)+
@@ -302,10 +337,10 @@ Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelArea, group=Population)
   theme(plot.title = element_text(face = 'bold', 
                                   size = 14, 
                                   hjust = 0))
-Fig.Exp1.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
+Fig.Area.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
 
 Area.Size$Date <- c(1,14,7,1,14,7,1,14,7)
-Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelLength, group=Population)) + 
+Fig.Length.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelLength, group=Population)) + 
   geom_errorbar(aes(ymin=Area.Size$mean.RelLength-Area.Size$se.RelLength,ymax=Area.Size$mean.RelLength+Area.Size$se.RelLength,color=Population), width=.07,position = position_dodge(width = 0.1)) +
   geom_line(aes(color=Population) ,size = 0.5,position = position_dodge(width = 0.1)) +   
   geom_point(aes(shape=Population,color=Population), size = 3,position = position_dodge(width = 0.1))+
@@ -324,9 +359,9 @@ Fig.Exp1.size <- ggplot(Area.Size, aes(x=Date, y=mean.RelLength, group=Populatio
   theme(plot.title = element_text(face = 'bold', 
                                   size = 14, 
                                   hjust = 0))
-Fig.Exp1.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
+Fig.Length.size + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
 ```
-Day 7
+Day 7 area
 ```{r}
 G1.D7 <- filter(G1.all, Date == "7-8-15")
 relarea.D7.model = lmer(A.rel ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
@@ -335,7 +370,7 @@ relarea.null <- lmer(A.rel ~ (1|Replicate),data=G1.D7,REML=FALSE)
 relarea.model.R <- lmer(A.rel ~ Population + (1|Replicate),data=G1.D7,REML = F)
 anova(relarea.null,relarea.model.R)
 ```
-Day 14
+Day 14 area
 ```{r}
 G1.D14 <- filter(G1.all, Date == "7-15-15")
 relarea.D14.model = lmer(A.rel ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
@@ -343,11 +378,6 @@ summary(relarea.D14.model)
 relarea.null <- lmer(A.rel ~ (1|Replicate),data=G1.D14,REML=FALSE)
 relarea.model.R <- lmer(A.rel ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
 anova(relarea.null,relarea.model.R)
-```
-
-```{r}
-pairwise.t.test(G1.D7$A.rel,G1.D7$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D14$A.rel,G1.D14$Population,p.adjust.method = "bonferroni")
 ```
 
 ```{r}
