--- a/larvae_growth_2015.Rmd
+++ b/larvae_growth_2015.Rmd
@@ -9,17 +9,11 @@ output:
     fig_width: 4
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Ctrl+Shift+Enter*. 
-
-##
-
 References
 http://www.flutterbys.com.au/stats/tut/tut9.2a.html
 http://rcompanion.org/rcompanion/d_07.html
 
-```{r, include=FALSE}
+```{r, message=FALSE}
 library(dplyr) #data frame grouping
 library(nlme) #LMMs, using likelihood ratio test for significance
 library(plotrix)#for SE calculation
@@ -29,6 +23,7 @@ library(lme4) #for linear mixed models
 library(afex) #different way for getting significance from LMMs
 library(PMCMR) #Kruskal-Wallis test
 ```
+# Setting up
 Reading in larvae size data.
 ```{r}
 all.larvae <- read.csv("PS_Larvae.csv",header = TRUE, na.strings = "#DIV/0!")
@@ -39,6 +34,7 @@ Summarizing sizes at different time points.
 G1.all.mean <- summarise(G1.all,mean.Area = mean(Area, na.rm = T),se.Area = std.error(Area,na.rm =T),mean.Length = mean(Average_Length, na.rm = T),se.Length = std.error(Average_Length,na.rm =T))
 G1.all.mean
 ```
+# Day 1
 Plotting size distributions at Day 1.
 ```{r}
 p.Day1 <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Area,fill=Population)) + 
@@ -103,7 +99,7 @@ shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length)
 shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length)
 shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length)
 ```
-Plotting size through time.
+# Plotting Size through time
 ```{r}
 G1.all.mean$Date <- c(1,14,7,1,14,7,1,14,7)
 Fig.Area <- ggplot(G1.all.mean, aes(x=Date, y=mean.Area, group=Population)) +
@@ -150,7 +146,7 @@ Fig.L <- ggplot(G1.all.mean, aes(x=Date, y=mean.Length, group=Population)) +
 Fig.L <- Fig.L + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
 Fig.L
 ```
-## Testing for differences in size
+# Testing for differences in size
 ANOVA of size at Day 1 to test if size differs accross populations at Day 1
 ```{r}
 G1.D1 <- filter(G1.all, Date == "7-1-15")
@@ -162,7 +158,7 @@ length.D1 <- aov(Average_Length ~ Population, data=G1.D1) #test the hypothesis r
 length.D1.res <- anova(length.D1)
 length.D1.res
 ```
-### Day 7
+## Day 7
 Untransformed shell area.
 ```{r}
 G1.D7 <- filter(G1.all, Date == "7-8-15")
@@ -208,7 +204,7 @@ afex.1 <- mixed(log10(Average_Length) ~ Population + (1|Replicate), data=G1.D7,n
 print(afex.1)
 ```
 
-### Day 14
+## Day 14
 Untransformed Day 14 shell area
 ```{r}
 G1.D14 <- filter(G1.all, Date == "7-15-15")
@@ -281,7 +277,7 @@ pairwise.t.test(G1.D1$Average_Length,G1.D1$Population,p.adjust.method = "bonferr
 pairwise.t.test(G1.D7$Average_Length,G1.D7$Population,p.adjust.method = "bonferroni")
 pairwise.t.test(G1.D14$Average_Length,G1.D14$Population,p.adjust.method = "bonferroni")
 ```
-## Using Relative Area and Length
+# Using Relative Area and Length
 Calculating shell area means at Day 1 for normalizations. This could be used is shell size varied significantly at Day 1. We did not observe this, but size did differ slightly between HC and NF/SS. 
 ```{r}
 means.A <- summarise(G1.all, mean.area = mean(Area, na.rm = TRUE), mean.length = mean(Average_Length))
